css/styles.css
body {
  background-color: #343327;
}

.container {
  background-color: #F5F3EC;
  padding: 1.75rem;
}

#header-image {
  float: right;
  border-radius: 50%;
  display: block;
  max-width: 430px;
  margin-bottom: 1rem;
  margin-left: 1rem;
  border: .5rem solid #fff;
}

.jumbotron {
  color: #F5F3EC;
  background-image: url("/Users/aitana/Documents/Epicodus/Projects/portfolio/img/gus-boots.png");
  background-color: #F5F3EC;
  height: 290px;
  padding-top: 100px;
}

.display-4 {
  color: #e3d1b1;
  font-weight: 400;
}

.bg-light, .navbar-light, navbar {
  background-color: #DE9E59;
}

h2 {
  font-size: 2.5rem;
  font-weight: 300;
  line-height: 2;
  color: #657642;
}

.img-thumbnail {
  float: left;
  max-height: 450px;
  margin-right: 20px;
  padding: 8px;
  background-color: #fff;
  border: 1px solid #dee2e6;
  border-radius: 0.25rem;
  height: auto;
}

.img-body {
  max-height: 450px;
  margin-top: 20px;
  margin-left: 40px;
  padding: 8px;
  background-color: #fff;
  border: 1px solid #dee2e6;
  border-radius: 0.25rem;
  height: auto;
}

.firstline {
    font-size: 1.15rem;
    font-weight: 400;
    color: #d8964f;
}

.centered-image {
  display: block;
  margin: auto;
}

.scope {
  width: 400px;
  overflow: hidden;
}

.card {
  width: 45%;
  float: left;
  padding: 20px;
  margin: 10px;
  background-color: #dc9d45a5;
  box-sizing: border-box;
}

.list {
  line-height: 26px;
  margin: 7px;
}

.list-group-item {
  background-color: #f5f3ec11;
}

.containerwithin {
  background-color: #F5F3EC;
  padding-left: 3rem;
  padding-right: 3rem;
  padding-bottom: 3rem;
  display: block;
  box-sizing: border-box;
}

.language {
  width: 20%;
}

.table {
  table-layout: fixed;
}

.table .thead-dark th {
  background-color: #657642;
  border-color: #657642;
}

.bg-dark {
  background-color: #d8964f !important;
}

a, a:active {
  color: #657642;
}

a:hover {
  color:#e3d1b1;
  text-decoration: none;
  background-color: #657642c7;
}

